--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ header {
         text-transform: uppercase;
         letter-spacing: 0.02em;
         line-height: 95px;
-        min-width: 734px;
+        min-width: 320px;
         margin: 0 auto 18px;
         color: var(--white-color);
 }
@@ -123,7 +123,7 @@ header {
         text-transform: uppercase;
         letter-spacing: 0.02em;
         line-height: 27px;
-        min-width: 734px;
+        min-width: 320px;
         margin: 0 auto;
         color: var(--white-color);
 }
@@ -131,4 +131,70 @@ header {
 .about {
         min-height: 1080px;
         position: relative;
+}
+
+.info {
+        position: absolute;
+        top: -150px;
+        left: 50%;
+        max-width: 1090px;
+        min-height: 300px;
+        transform: translate(-50%);
+        width: 100%;
+        background-color: #F7F7F7;
+        padding: 57px 130px;
+}
+
+.about__grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 30px;
+        justify-items: center;
+}
+
+.about__grid-item {
+        text-align: center;
+        width: 190px;
+}
+
+.about__h4 {
+        color: var(--accent-color);
+        margin-bottom: 25px;
+        font-family: 'Oswald', sans-serif;
+        font-weight: 500;
+        font-size: 72px;
+        text-transform: uppercase;
+}
+
+.about__h5 {
+        color: var(--dark-color);
+        font-family: 'Oswald', sans-serif;
+        font-weight: 500;
+        font-size: 36px;
+        text-transform: uppercase;
+}
+
+.about__h6 {
+        color: var(--gray-color);
+        font-family: 'Oswald', sans-serif;
+        font-weight: 500;
+        font-size: 9px;
+        text-transform: uppercase;
+}
+
+@media screen and (max-width: 1280px) {
+        .about__grid {
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: (2, 1fr);
+        }
+}
+
+@media screen and (max-width: 768px) {
+        .about__grid {
+                grid-template-columns: repeat(1, 1fr);
+                grid-template-rows: (4, 1fr);
+        }
+        .info {
+                position: relative;
+        }
 }
