--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ html {
         box-sizing: inherit;
 }
 
+img {
+        display: block;
+        max-width: 100%;
+}
+
 h1, h2, h3, h4, h5, h6 {
         padding: 0;
         margin: 0;
@@ -48,6 +53,7 @@ body {
         font-weight: 500;
         font-size: 21px;
         text-transform: uppercase;
+        letter-spacing: 0.02em;
 }
 
 .text-p {
@@ -116,6 +122,13 @@ header {
         color: var(--white-color);
 }
 
+@media screen and (max-width: 380px) {
+        .h1 {
+                font-size: 46px;
+                line-height: 64px;
+        }
+}
+
 .h4 {
         font-weight: 300;
         font-size: 18px;
@@ -129,6 +142,7 @@ header {
 }
 
 .about {
+        padding-top: 250px;
         min-height: 1080px;
         position: relative;
 }
@@ -196,5 +210,178 @@ header {
         }
         .info {
                 position: relative;
+                padding: 30px 0;
+        }
+}
+
+.text-h2 {
+        text-align: center;
+        margin-bottom: 60px;
+}
+.project-h2 {
+
+}
+.about__flex {
+        display: flex;
+        gap: 30px;
+}
+.about__flex-item {
+        max-width: 350px;
+}
+.project-img {
+        margin-bottom: 45px;
+}
+.rectangle {
+        width: 55px;
+        height: 6px;
+        background-color: var(--accent-color);
+        margin-bottom: 15px;
+}
+.text-h3 {
+
+}
+.project-h3 {
+        color: var(--dark-color);
+        margin-bottom: 20px;
+}
+
+.text-p {
+        color: var(--gray-color);
+}
+.project-p {
+
+}
+
+@media screen and (max-width: 1280px) {
+        .about {
+                padding: 450px 15px 110px 15px;
+        }
+}
+
+@media screen and (max-width: 768px) {
+        .about__flex {
+                flex-direction: column;
+                align-items: center;
+        }
+
+        .about__flex-item {
+                margin-right: 0;
+                margin-bottom: 30px;
+        }
+}
+
+.request {
+        background-color: var(--accent-color);
+        padding: 30px 405px;
+        min-height: 181px;
+}
+
+.request__flex {
+        display: flex;
+        justify-content: space-between;
+}
+
+.request__flex-item{
+        text-align: center;
+}
+
+.title-h2 {
+        color: var(--bg-color);
+        font-size: 50px;
+}
+.subtitle-h3 {
+        color: var(--bg-color);
+        font-size: 25px;
+}
+
+.request-button {
+        display: flex;
+        margin-top: 40px;
+        padding: 15px 32px;
+        border: 1px solid red;
+        font-size: 15px;
+        font-family: 'Oswald', sans-serif;;
+        font-weight: 500;
+        cursor: pointer;
+}
+
+.request-img {
+        margin-top: 3px;
+        margin-right: 15px;
+        width: 18px;
+        height: 18px;
+}
+
+.request-text {
+        color: var(--dark-color);
+}
+
+@media screen and (max-width: 1280px) {
+        .request {
+                padding-left: 15px;
+                padding-right: 15px;
+        }
+}
+
+@media screen and (max-width: 768px) {
+        .request__flex {
+                flex-wrap: wrap;
+        }
+}
+
+.services {
+        padding: 150px 0;
+}
+
+.section__h2, .services__h4 {
+        color: #000000;
+        text-align: center;
+}
+
+.section__h2 {
+        margin-bottom: 55px;
+}
+
+.services__h4 {
+        margin: 0 auto;
+        max-width: 172px;
+        text-transform: uppercase;
+}
+
+
+.services__grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 30px;
+        justify-items: center;
+}
+.services__grid-item {
+        padding: 59px 0;
+        background-color: #f7f7f7;
+        width: 350px;
+}
+.services__icon {
+        margin: 0 auto 21px;
+}
+
+@media screen and (max-width: 1280px) {
+        .services {
+                padding-left: 15px;
+                padding-right: 15px;
+        }
+        .services__grid {
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: (3, 1fr);
+        }
+        .services__grid-item {
+                width: 100%;
+        }
+}
+
+@media screen and (max-width: 768px) {
+        .services__grid {
+                grid-template-columns: repeat(1, 1fr);
+                grid-template-rows: (1, 1fr);
         }
 }
