--- a/css/style.css
+++ b/css/style.css
@@ -385,3 +385,160 @@ header {
                 grid-template-rows: (1, 1fr);
         }
 }
+
+.portfolio__grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-items: center;
+        gap: 0;
+}
+.portfolio__grid-item {
+}
+
+@media screen and (max-width: 1280px) {
+        .portfolio__grid{ 
+                grid-template-columns: repeat(2,1fr);
+        }
+}
+
+@media screen and (max-width: 768px) {
+        .portfolio__grid{ 
+                grid-template-columns: repeat(1,1fr);
+        }
+}
+
+.questions {
+        padding-top: 150px;
+        padding-bottom: 150px;
+}
+
+.questions, .section__h2 {
+        margin-bottom: 50px;
+}
+
+.text-h2 {
+}
+.questions__items {
+}
+.questions__item {
+}
+.question-h3 {
+        text-transform: uppercase;
+        color: var(--accent-color);
+        margin-bottom: 30px;
+}
+
+.question-p {
+        margin-bottom: 40px;
+        color: var(--gray-color);
+        max-width: 730px;
+}
+
+.question-h3.close::before, .question-h3.open::before {
+        content: "";
+        display: inline-block;
+        width: 15px;
+        height: 15px;
+        background-image: url(../img/arrow-icon.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-right: 15px;
+}
+
+.question-h3.open::before {
+        transform: rotate(90deg);
+}
+
+.question-h3.close + .question-p {
+        display: none;
+}
+
+@media screen and (max-width: 1280px) {
+        .questions {
+                padding:150px 15px 110px;
+        }
+}
+
+.partners {
+        padding-top: 100px;
+        padding-bottom: 80px;
+        background-color: var(--dark-color);
+}
+
+.partners-h2 {
+        color: var(--white-color);
+        text-align: center;
+        margin-bottom: 50px;
+}
+.partners__flex {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+}
+.partners__item {
+        margin-right: 50px;
+        margin-bottom: 20px;
+        max-width: 170px;
+}
+
+@media screen and (max-width: 1280px) {
+        .partners__flex {
+                justify-content: center;
+        }
+
+        .partners__flex:nth-child(5) {
+                margin-right: 10px;
+                margin-left: 10px;
+}
+        .partners__item {
+                margin-right: 10px;
+                margin-left: 10px;
+        }
+}
+
+.reviews {
+        padding-top: 150px;
+        padding-bottom: 150px;
+}
+
+.reviews__grid {
+        display: grid;
+        gap: 30px;
+        grid-template-columns: repeat(3,1fr);
+}
+.reviews__item {
+
+}
+.reviews__card {
+        background-color: #f7f7f7;
+        padding: 30px;
+        margin-bottom: 30px;
+}
+
+.reviews__text-accent {
+        color: var(--accent-color);
+}
+
+.p-reviews {
+}
+
+.reviews-h4 {
+        text-transform: none;
+}
+
+@media screen and (max-width: 1280px) {
+        .reviews {
+                padding: 100px 15px;
+        }
+        .reviews__grid {
+                grid-template-columns: repeat(2, 1fr);
+        }
+}
+
+@media screen and (max-width: 768px) {
+        .reviews__grid {
+                grid-template-columns: (1, 1fr);
+        }
+}
+
+
